@@ -3,6 +3,9 @@ from zope import schema
 
 from plone.app.deco import PloneMessageFactory as _
 
+class IOmittedField(Interface):
+    """Marker interface for schema fields not to be shown in Deco
+    """
 
 class IDecoRegistryAdapter(Interface):
     """Marker interface for the registry adapter"""
