@@ -32,7 +32,6 @@ setup(name='plone.app.deco',
       zip_safe=False,
       install_requires=[
           'setuptools',
-          'plone.directives.standardtiles',
           'plone.app.tiles',
           'plone.app.registry',
           'plone.app.dexterity',
